--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,4 +1,7 @@
 <mvc:View xmlns="sap.m"
+    controllerName="sap.ui.demo.walkthrough.controller.App"
     xmlns:mvc="sap.ui.core.mvc">
-    <Text text="Hello UI5 agin!"></Text>
+    <Button text="Hi"
+        press=".onShowHello"
+    ></Button>
 </mvc:View>
