--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,7 +1,7 @@
 <mvc:View xmlns="sap.m"
     controllerName="sap.ui.demo.walkthrough.controller.App"
     xmlns:mvc="sap.ui.core.mvc">
-    <Button text="Hi"
+    <Button text="{i18n>showHelloButtonText}"
         press=".onShowHello"
     ></Button>
     <Input
