--- a/webapp/view/App.view.xml
+++ b/webapp/view/App.view.xml
@@ -1,15 +1,24 @@
 <mvc:View xmlns="sap.m"
     controllerName="sap.ui.demo.walkthrough.controller.App"
     xmlns:mvc="sap.ui.core.mvc" displayBlock="true">
-    <App>
+    <App class="myAppDemoWT">
         <pages>
             <Page title="{i18n>homePageTitle}">
                 <content>
-                    <Panel headerText="{i18n>helloPanelTitle}">
+                    <Panel headerText="{i18n>helloPanelTitle}"
+                        class="sapUiResponsiveMargin"
+                        width="auto">
                         <content>
-                            <Button text="{i18n>showHelloButtonText}" press=".onShowHello" />
-                            <Input value="{/recipient/name}" description="Hello {/recipient/name }"
-                                valueLiveUpdate="true" width="60%" />
+                            <Button text="{i18n>showHelloButtonText}"
+                                press=".onShowHello"
+                                class="myCustomButton" />
+                            <Input value="{/recipient/name}"
+                                description="Hello {/recipient/name }"
+                                valueLiveUpdate="true"
+                                width="60%" />
+                            <FormattedText
+                                htmlText="Hello {/recipient/name}"
+                                class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText" />
                         </content>
                     </Panel>
                 </content>
